added prefetch function so it's warmed up by the time submit is hit

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,9 @@
     }
 
   </style>
+  <script async>
+    fetch('/askdomaingpt');
+  </script>
   <script>
 
     let res = { initial: true};   // response from the server, state info for the next request
