--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
 
 <body>
   <div id="nonFooter">
-    <h4>DomainGPT - Ask chatGPT to discover available domain names for your startup</h4>
+    <h4>DomainGPT - Ask the latest GPT4o (May 13, 2024)to discover available domain names for your startup</h4>
     <div id="conversation" hidden></div>
     <div class="spinner-grow spinner-grow-sm text-primary" id="spinner" hidden></div>
   </div>
@@ -169,7 +169,7 @@
       <input type="submit" value="Submit" id="submit"></input>
     </form>
     <br>
-    <div id="reminder" hidden><small>Please be patient with chatGPT. It can take minutes during peak hours.</small></div>
+    <div><span id="reminder"><small>An experiment by <a href="https://evergreen-labs.org">evergreen-labs.org</a></small></span></div>
   </div>
 
 
