update to handle gpt4o

--- a/public/index.html
+++ b/public/index.html
@@ -158,13 +158,13 @@
 
 <body>
   <div id="nonFooter">
-    <h4>DomainGPT - Ask the latest GPT4o (May 13, 2024)to discover available domain names for your startup</h4>
+    <h4>DomainGPT - Ask the latest GPT4o (May 13, 2024) to discover available domain names for your startup</h4>
     <div id="conversation" hidden></div>
     <div class="spinner-grow spinner-grow-sm text-primary" id="spinner" hidden></div>
   </div>
   <div id="footer">
     <form onsubmit="submitPrompt(); return false;">
-      <input id="prompt" name="prompt" autocomplete="new-password" placeholder="What does your startup do?"></input>
+      <input id="prompt" name="prompt" autocomplete="new-password" placeholder="What does your startup do? (e.g. make plush toys)"></input>
       <br>
       <input type="submit" value="Submit" id="submit"></input>
     </form>
