--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <title>DomainGPT - Talk to chatGPT to discover available domain names for your startup</title>
+  <title>DomainGPT - Talk to gpt4o to discover available domain names for your startup</title>
 
   <style media="screen">
     html,
