--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <title>DomainGPT - Talk to gpt4o to discover available domain names for your startup</title>
+  <title>DomainGPT - Talk to chatgpt-4o-latest model to discover available domain names for your startup</title>
 
   <style media="screen">
     html,
@@ -158,7 +158,7 @@
 
 <body>
   <div id="nonFooter">
-    <h4>DomainGPT - Ask the latest GPT4o (May 13, 2024) to discover available domain names for your startup</h4>
+    <h4>DomainGPT - Ask chatGPT (chatgpt-4o-latest) to discover available domain names for your startup</h4>
     <div id="conversation" hidden></div>
     <div class="spinner-grow spinner-grow-sm text-primary" id="spinner" hidden></div>
   </div>
